made changes to angular.json build file

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 #main{ 
-    background: url('/assets/2325front.jpg') no-repeat center center ;
+    background: url('src/assets/2325front.jpg') no-repeat center center ;
     background-size:cover;
     height:100vh;
 }
