--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,1 +1,23 @@
-<h1>photos works!</h1>
+<div class="container">
+    <h3>Select which apartment you would like to view photos from</h3>
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+        <input type="radio" name="options" id="building" autocomplete="off" checked>Building
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="options" id="bsmnt" autocomplete="off">Basement
+        </label>
+        <label class="btn btn-secondary">
+        <input type="radio" name="options" id="apt1" autocomplete="off">Apt1 (1st Floor)
+        </label>
+        <label class="btn btn-secondary">
+        <input type="radio" name="options" id="apt2" autocomplete="off">Apt2 (2nd Floor)
+        </label>
+    </div>
+
+
+    <div class="row">
+
+    </div>
+
+</div>
