--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/home-component" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
+            <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/photos-component" ariaCurrentWhenActive="page">Photos</a>
+            <a class="nav-link" routerLink="/photos" ariaCurrentWhenActive="page">Photos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/register-component" ariaCurrentWhenActive="page">Register</a>
+            <a class="nav-link" routerLink="/register" ariaCurrentWhenActive="page">Register</a>
           </li>
         </ul>
         <ul class="navbar-nav">
