photos and register draft completed

--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,23 +1,60 @@
 <div class="container">
-    <h3>Select which apartment you would like to view photos from</h3>
-    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-        <label class="btn btn-secondary active">
-        <input type="radio" name="options" id="building" autocomplete="off" checked>Building
-        </label>
-        <label class="btn btn-secondary">
-            <input type="radio" name="options" id="bsmnt" autocomplete="off">Basement
-        </label>
-        <label class="btn btn-secondary">
-        <input type="radio" name="options" id="apt1" autocomplete="off">Apt1 (1st Floor)
-        </label>
-        <label class="btn btn-secondary">
-        <input type="radio" name="options" id="apt2" autocomplete="off">Apt2 (2nd Floor)
-        </label>
+        <!-- BEGIN header-->
+    <div class="row mt-3 text-center">
+        <h3>Select which apartment you would like to view photos from</h3>
+        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+            <label class="btn btn-outline-primary" for="btnradio1">Basement</label>
+          
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio2">Apt1 (1st Floor)</label>
+          
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+            <label class="btn btn-outline-primary" for="btnradio3">Apt2 (2nd Floor)</label>
+        </div>
     </div>
 
-
-    <div class="row">
-
+        <!-- BEGIN test forms-->
+    <div class="row justify-content-center">
+        <div class="card mx-1 my-2">
+            <img class="card-img-top">
+            <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>        
+        <div class="card mx-1 my-2">
+            <img class="card-img-top">
+            <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>    
+        <div class="card mx-1 my-2">
+            <img class="card-img-top">
+            <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>    
+        <div class="card mx-1 my-2">
+            <img class="card-img-top">
+            <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>      
     </div>
 
+    <!-- BEGIN angular generated forms-->
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
 </div>
