--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,60 @@
-<p>register works!</p>
+<div class="container">
+<h3>Register now to submit an application</h3>
+
+<form>
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+    <div class="mb-3">
+      <label for="fName" class="form-label">First Name</label>
+      <input type="text" class="form-control" id="fName">
+    </div>
+    <div class="mb-3">
+        <label for="lName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="lName">
+    </div>  
+    <div class="mb-3">
+        <label for="age" class="form-label">Age</label>
+        <input type="text" class="form-control" id="age">
+    </div>
+    <div class="mb-3 d-flex">
+        <label for="gender" class="form-label me-2">Gender</label>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderM" checked>
+                <label class="form-check-label" for="genderM">Male</label>
+            </div>
+            <div class="form-check mx-2">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderF" checked>
+                <label class="form-check-label" for="genderF">Female</label>
+            </div>
+    </div>
+    <div class="mb-3">
+        <label for="address" class="form-label">Address</label>
+        <input type="text" class="form-control" id="Address">
+    </div>
+    <div class="mb-3">
+        <label for="city" class="form-label">City</label>
+        <input type="text" class="form-control" id="city">
+    </div>
+    <div class="mb-3">
+        <label for="state" class="form-label">State</label>
+        <input type="text" class="form-control" id="state">
+    </div>
+    <div class="mb-3">
+        <label for="zip" class="form-label">Zip Code</label>
+        <input type="number" class="form-control" id="zip">
+    </div>
+    <div class="mb-3">
+        <label for="phone" class="form-label">Phone</label>
+        <input type="text" class="form-control" id="phone">
+    </div>
+    <div class="mb-3">
+        <label for="ssn" class="form-label">SSN</label>
+        <input type="password" class="form-control" id="ssn" aria-describedby="ssnHelp">
+        <div id="ssnHelp" class="form-text">Required for credit and background check</div>
+      </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
