--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,23 +1,23 @@
-<div class="container">
+<div class="container my-3">
 <h3>Register now to submit an application</h3>
 
 <form>
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
     <div class="mb-3">
       <label for="fName" class="form-label">First Name</label>
-      <input type="text" class="form-control" id="fName">
+      <input type="text" class="form-control" id="fName" required>
     </div>
     <div class="mb-3">
         <label for="lName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="lName">
+        <input type="text" class="form-control" id="lName" required>
     </div>  
     <div class="mb-3">
         <label for="age" class="form-label">Age</label>
-        <input type="text" class="form-control" id="age">
+        <input type="text" class="form-control" id="age" required>
     </div>
     <div class="mb-3 d-flex">
         <label for="gender" class="form-label me-2">Gender</label>
@@ -32,27 +32,27 @@
     </div>
     <div class="mb-3">
         <label for="address" class="form-label">Address</label>
-        <input type="text" class="form-control" id="Address">
+        <input type="text" class="form-control" id="Address" required>
     </div>
     <div class="mb-3">
         <label for="city" class="form-label">City</label>
-        <input type="text" class="form-control" id="city">
+        <input type="text" class="form-control" id="city" required>
     </div>
     <div class="mb-3">
         <label for="state" class="form-label">State</label>
-        <input type="text" class="form-control" id="state">
+        <input type="text" class="form-control" id="state" required>
     </div>
     <div class="mb-3">
         <label for="zip" class="form-label">Zip Code</label>
-        <input type="number" class="form-control" id="zip">
+        <input type="number" class="form-control" id="zip" required>
     </div>
     <div class="mb-3">
         <label for="phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="phone">
+        <input type="text" class="form-control" id="phone" required>
     </div>
     <div class="mb-3">
         <label for="ssn" class="form-label">SSN</label>
-        <input type="password" class="form-control" id="ssn" aria-describedby="ssnHelp">
+        <input type="password" class="form-control" id="ssn" aria-describedby="ssnHelp" required>
         <div id="ssnHelp" class="form-text">Required for credit and background check</div>
       </div>
     <button type="submit" class="btn btn-primary">Submit</button>
