--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,15 +1,10 @@
 <div class="container my-3">
 <h3>Register now to submit an application</h3>
 
-<form>
+<form id="registerForm" class="d-flex" (ngSubmit)="submit(registerForm)" #registerForm="ngForm" novalidate>
     <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
-    <div class="mb-3">
-      <label for="fName" class="form-label">First Name</label>
-      <input type="text" class="form-control" id="fName" required>
+        <label for="fName" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="fName" required>
     </div>
     <div class="mb-3">
         <label for="lName" class="form-label">Last Name</label>
@@ -21,14 +16,14 @@
     </div>
     <div class="mb-3 d-flex">
         <label for="gender" class="form-label me-2">Gender</label>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderM" checked>
-                <label class="form-check-label" for="genderM">Male</label>
-            </div>
-            <div class="form-check mx-2">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderF" checked>
-                <label class="form-check-label" for="genderF">Female</label>
-            </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderM" checked>
+            <label class="form-check-label" for="genderM">Male</label>
+        </div>
+        <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderF" checked>
+            <label class="form-check-label" for="genderF">Female</label>
+        </div>
     </div>
     <div class="mb-3">
         <label for="address" class="form-label">Address</label>
@@ -54,7 +49,16 @@
         <label for="ssn" class="form-label">SSN</label>
         <input type="password" class="form-control" id="ssn" aria-describedby="ssnHelp" required>
         <div id="ssnHelp" class="form-text">Required for credit and background check</div>
-      </div>
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" required>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
