--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,64 +1,92 @@
 <div class="container my-3">
 <h3>Register now to submit an application</h3>
 
-<form id="registerForm" class="d-flex" (ngSubmit)="submit(registerForm)" #registerForm="ngForm" novalidate>
+<form id="registerForm" (ngSubmit)="submit(registerForm)" #registerForm="ngForm" novalidate>
     <div class="mb-3">
         <label for="fName" class="form-label">First Name</label>
-        <input type="text" class="form-control" id="fName" required>
+        <input type="text" name="fName" class="form-control" id="fName" required ngModel>
     </div>
     <div class="mb-3">
         <label for="lName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="lName" required>
+        <input type="text" name="lName" class="form-control" id="lName" required ngModel>
     </div>  
     <div class="mb-3">
         <label for="age" class="form-label">Age</label>
-        <input type="text" class="form-control" id="age" required>
+        <input type="text" name="Age" class="form-control" id="age" required ngModel>
     </div>
     <div class="mb-3 d-flex">
-        <label for="gender" class="form-label me-2">Gender</label>
+        <label class="form-label me-2">Gender</label>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderM" checked>
+            <input class="form-check-input" name="genderM" type="radio" value="Male" name="gender" id="genderM" ngModel>
             <label class="form-check-label" for="genderM">Male</label>
         </div>
         <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="genderF" checked>
+            <input class="form-check-input" name="genderF" type="radio" value="Female" name="gender" id="genderF" ngModel>
             <label class="form-check-label" for="genderF">Female</label>
         </div>
     </div>
     <div class="mb-3">
-        <label for="address" class="form-label">Address</label>
-        <input type="text" class="form-control" id="Address" required>
+        <label for="Address" class="form-label">Address</label>
+        <input type="text" name="Address" class="form-control" id="Address" required ngModel>
     </div>
     <div class="mb-3">
         <label for="city" class="form-label">City</label>
-        <input type="text" class="form-control" id="city" required>
+        <input type="text" name="city" class="form-control" id="city" required ngModel>
     </div>
     <div class="mb-3">
         <label for="state" class="form-label">State</label>
-        <input type="text" class="form-control" id="state" required>
+        <input type="text" name="state" class="form-control" id="state" required ngModel>
     </div>
     <div class="mb-3">
         <label for="zip" class="form-label">Zip Code</label>
-        <input type="number" class="form-control" id="zip" required>
+        <input type="number" name="zip" class="form-control" id="zip" required ngModel>
     </div>
     <div class="mb-3">
-        <label for="phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="phone" required>
+        <label for="Phone" class="form-label">Phone</label>
+        <input type="text" name="Phone" class="form-control" id="Phone" required ngModel>
     </div>
     <div class="mb-3">
-        <label for="ssn" class="form-label">SSN</label>
-        <input type="password" class="form-control" id="ssn" aria-describedby="ssnHelp" required>
+        <label for="SSN" class="form-label">SSN</label>
+        <input type="password" name="SSN" class="form-control" id="SSN" aria-describedby="ssnHelp" required ngModel>
         <div id="ssnHelp" class="form-text">Required for credit and background check</div>
     </div>
     <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+        <label for="Email" class="form-label">Email address</label>
+        <input type="email" name="Email" class="form-control" id="Email" aria-describedby="emailHelp" required ngModel>
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required>
+        <label for="Password" class="form-label">Password</label>
+        <input type="password" name="Password" class="form-control" id="Password" required ngModel>
+    </div>
+    <div class="mb-3">
+        <label for="confirmPassword" class="form-label">Password</label>
+        <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" required ngModel>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    <input type="hidden" name="Name" id="Name" ngModel>
+    <input type="hidden" name="IsMale" id="IsMale" ngModel>
+    <input type="hidden" name="RelatedTo" id="RelatedTo" ngModel>
+    <input type="hidden" name="Relationship" id="Relationship" ngModel>
 </form>
+
+<button hidden type="button" id="openModalButton" #openModalButton data-bs-toggle="modal" data-bs-target="#successModal">Open Modal</button>
+
+<!-- Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Registration Complete</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          You may now sign in and complete an application
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
