--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,13 @@
 <div class="container my-3">
 <h3>Register now to submit an application</h3>
 
+<div id="errorBlock" *ngIf="containsErrors" class="row">
+    <div class="col">
+        <h4>Please fix these errors in your form</h4>
+        <h5>{{errors}}</h5>
+    </div>
+</div>
+
 <form id="registerForm" (ngSubmit)="submit(registerForm)" #registerForm="ngForm" novalidate>
     <div class="mb-3">
         <label for="fName" class="form-label">First Name</label>
@@ -17,11 +24,11 @@
     <div class="mb-3 d-flex">
         <label class="form-label me-2">Gender</label>
         <div class="form-check">
-            <input class="form-check-input" name="genderM" type="radio" value="Male" name="gender" id="genderM" ngModel>
+            <input class="form-check-input" type="radio" value="Male" name="gender" id="genderM" ngModel>
             <label class="form-check-label" for="genderM">Male</label>
         </div>
         <div class="form-check mx-2">
-            <input class="form-check-input" name="genderF" type="radio" value="Female" name="gender" id="genderF" ngModel>
+            <input class="form-check-input" type="radio" value="Female" name="gender" id="genderF" ngModel>
             <label class="form-check-label" for="genderF">Female</label>
         </div>
     </div>
@@ -60,7 +67,7 @@
         <input type="password" name="Password" class="form-control" id="Password" required ngModel>
     </div>
     <div class="mb-3">
-        <label for="confirmPassword" class="form-label">Password</label>
+        <label for="confirmPassword" class="form-label">Confirm Password</label>
         <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" required ngModel>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
