--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,26 +19,26 @@
             <a class="nav-link" routerLink="/application" ariaCurrentWhenActive="page">Application</a>
           </li>
         </ul>
-        <ul class="navbar-nav" *ngIf="displayLoginError">
-          <li class="nav-item col" style="color : red">
+        <ul class="navbar-nav px-2" *ngIf="displayLoginError">
+          <li class="nav-item col" style="color : red; text-align : center">
             <div>Incorrect Username/password</div>
           </li> 
         </ul>
         <ul *ngIf="!validated" class="navbar-nav">
           <form id="loginForm" class="d-flex" (ngSubmit)="submit(loginForm)" #loginForm="ngForm" novalidate>
-            <li class="nav-item px-2">
+            <li class="nav-item col-5">
                 <input type="text" name="Email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon1" ngModel>
             </li>
-            <li class="nav-item px-2">  
+            <li class="nav-item col-5 px-2">  
               <input type="password" name="Password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" ngModel>
             </li>
-            <li class="nav-item px-2">
+            <li class="nav-item col">
               <button class="btn btn-outline-success" type="submit">Login</button>
             </li>
           </form>
         </ul>
         <ul *ngIf="validated" class="navbar-nav">
-          <li class="nav-item px-2">
+          <li class="nav-item">
             Welcome {{userLoggedIn}}
           </li>
         </ul>
