--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,7 +33,10 @@
               <input type="password" name="Password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" ngModel>
             </li>
             <li class="nav-item col">
-              <button class="btn btn-outline-success" type="submit">Login</button>
+              <button class="btn btn-outline-success" type="submit">
+                <span [ngClass]="{'spinner-border spinner-border-sm' : loading}" role="status" aria-hidden="true"></span>
+                Login
+              </button>
             </li>
           </form>
         </ul>
