added user session

--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -1,3 +1,10 @@
 <div class="container my-3">
     <h3>Begin the application Process</h3>
+
+    <form id="submitAppForm" (ngSubmit)="submit(submitAppForm)" #submitAppForm="ngForm">
+        <button type="submit" class="btn btn-primary">
+            <span [ngClass]="{'spinner-border spinner-border-sm' : loading}" role="status" aria-hidden="true"></span>
+            Submit Application
+        </button>
+    </form>
 </div>
