--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -41,8 +41,14 @@
           </form>
         </ul>
         <ul *ngIf="validated" class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item pe-2" style="align-self: center">
             Welcome {{userLoggedIn}}
+          </li>
+          <li class="nav-item col">
+            <button class="btn btn-outline-success" (click)="logout()">
+              <span [ngClass]="{'spinner-border spinner-border-sm' : loading}" role="status" aria-hidden="true"></span>
+              Logout
+            </button>
           </li>
         </ul>
       </div>
