changed photos in photos tab

--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -1,5 +1,5 @@
 <div class="container my-3">
-    <h3>Begin the application Process</h3>
+    <h3>Submit your application</h3>
 
     <form id="submitAppForm" (ngSubmit)="submit(submitAppForm)" #submitAppForm="ngForm">
         <button type="submit" class="btn btn-primary">
