--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -19,7 +19,7 @@
         <div class="col col-lg-3 col-md-6 col-sm-6 col-xs-6" *ngFor="let number of numbers1">
         <!-- BEGIN angular generated forms-->
             <div class="card mx-1 my-2">
-                <img class="card-img-top">
+                <img id="bsmnt" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -33,7 +33,7 @@
         <div class="col col-lg-3 col-md-6 col-sm-6 col-xs-6" *ngFor="let number of numbers2">
         <!-- BEGIN angular generated forms-->
             <div class="card mx-1 my-2">
-                <img class="card-img-top">
+                <img id="apt1" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -47,7 +47,7 @@
         <div class="col col-lg-3 col-md-6 col-sm-6 col-xs-6" *ngFor="let number of numbers3">
         <!-- BEGIN angular generated forms-->
             <div class="card mx-1 my-2">
-                <img class="card-img-top">
+                <img id="apt2" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
