--- a/src/app/photos/photos.component.css
+++ b/src/app/photos/photos.component.css
@@ -1,5 +1,16 @@
-img{
+
+#bsmnt{
     height:14rem;
-    background: url('src/assets/2325front.jpg') no-repeat center center ;
+    background: url('src/assets/bsmnt/room2.jpg') no-repeat center center ;
+    background-size: cover;
+}
+#apt1{
+    height:14rem;
+    background: url('src/assets/1/room1.jpg') no-repeat center center ;
+    background-size: cover;
+}
+#apt2{ 
+    height:14rem;
+    background: url('src/assets/2/bedroom1.jpg') no-repeat center center ;
     background-size: cover;
 }
